test_regress/t/t_cover_fsm_combo_same_warn_bad.out
%Warning-COVERIGN: t/t_cover_fsm_combo_same_warn_bad.v:28:19: Ignoring unsupported: FSM coverage on multiple supported case statements found in the same combinational always block. Only the first candidate will be instrumented.
   28 |       S1: state_d = S2;
      |                   ^
                   t/t_cover_fsm_combo_same_warn_bad.v:24:19: ... Location of first supported candidate for 't.state_q'
   24 |       S0: state_d = S1;
      |                   ^
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
